--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       <div class="container">
         <section class="wrapper">
           <div class="heading">
-            <h1 class="text text-large">Sign In <span>Park</span>Point <img src="./Group 8739.png" alt=""></h1>
+            <div class="img">
+            <img src="./Group 8739.png" alt=""></div>
+            <h1 class="text text-large">Sign In <span>Park</span>Point </h1>
             <p class="text text-normal">
               New user?
               <span
