--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/media.css">
-    <title>Login</title>
+    <title>ParkPoint</title>
+    <link rel="icon" href="./Group 8739.png"/>
   </head>
   <body>
     <main class="main">
